css/styles.css
/* Custom Properties */
:root {
  --clr-accent-tp: rgba(205,207,195, 40%);
  --clr-accent: rgb(209,217,198);
}

* {
  box-sizing: border-box;
  margin: 0;
  font-family: 'Libre Baskerville', serif;
  scroll-behavior: smooth;
}

body {
  margin: 0;
}

#navbar {
  background-color: var(--clr-accent-tp); /* Green background color */
  position: fixed; /* Make it stick/fixed */
  top: -200px; /* Hide the navbar 50 px outside of the top view */
  width: 100%; /* Full width */
  transition: top 0.3s; /* Transition effect when sliding down (and up) */
  padding: 1em;
}

.inner-nav {
  display: flex;
  justify-content: space-around;
  align-items: center;
}

.nav-left img{
  width: 15em;

}

.nav-mid a{
  margin: 1em;
  color: black;
  text-transform: uppercase;
  text-decoration: none;
}

.nav-mid a:hover {
  color: white;
}

.nav-right {
  display: flex;
  align-items: center;
}

.nav-right img {
  margin-right: 1em;
}

.nav-right button {
  color: white;
  background-color: black;
  padding: 1.5em;
  border-radius: 0.5em;
  box-shadow: none;
}


/* End of Nav */

/* Start of Home */
.home {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  height: 100vh;
  background-image: url(./assets/imgs/home-bg.jpg);
}

.hero h1, .hero p{
  text-align: center;
  color: white;
  margin-top: 4em;
  text-shadow: 1px 1px 1px black;
}

.hero h1 {
  font-size: 3em;
  width: 20em;
}

.hero p {
  font-size: 1.5em;
  width: 40em;
}



/* End of Home */


/* banner */
.quote-banner {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  flex-wrap: wrap;
  background-color: var(--clr-accent);
  color: black;
  height: 15em;
  text-align: center;
}

.quote-banner p {
  color: black;
}

/* End of banner */


/* Start of About Us */
.about-us{
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 80%;
  margin: 10rem auto 0 auto;
}

.about-us-text {
  padding-left: 2em;
}

.about-us h3 {
  font-size: 4em;
  margin-bottom: 1em;
}

.about-us img {
  max-width: 50%;
  height: 100%;
}

.about-us p {
  line-height: 2em;
  width: 93%;
}

.about-us button {
margin-top: 2em;
background-color: var(--clr-accent);
color: black;
padding: 1.5em;
border-radius: 0.7em;
box-shadow: none;
}

/* End of about Us */

/* Start of services */
.services {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  height: 70vh;;
  margin: 10rem auto 0 auto;
  padding: 1em;
  background-color: var(--clr-accent);
}

.services-text {
  padding: 5em;
}

.services h3 {
  font-size: 3em;
}

.services p {
  line-height: 2em;
}


.services button {
  margin-top: 2em;
  background-color: black;
  color: var(--clr-accent);
  padding: 1.5em;
  border-radius: 0.7em;
  box-shadow: none;
}

/* End of services */


/* Our work */
.portfolio {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 80%;
  margin: 10rem auto 0 auto;
  padding-bottom: 5.5em;
}

.portfolio-text {
  padding: 5em;
}

.portfolio-text h3{
  font-size: 2em;
  margin-bottom: 1em;
}

.portfolio-text p {
  font-size: 1.1em;
  margin-bottom: 1em;
}

.portfolio-text button {
  margin-top: 2em;
  background-color: var(--clr-accent);
  padding: 1.5em;
  border-radius: 0.7em;
  box-shadow: none;
}
/* end of work */

/* Contact */
.contact {
  background-image: url(/assets/imgs/contact-us-bg.avif);
  height: 25em;
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;

  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  flex-wrap: wrap;
}

.contact h3 {
  color: white;
  font-size: 3em;
  text-shadow: 1px 1px 1px black;
}

.contact p {
  color: white;
  text-shadow: 1px 1px 1px black;
}

.contact button {
  background-color: var(--clr-accent);
  margin-top: 2em;
  padding: 1.5em;
  border-radius: 0.7em;
  box-shadow: none;
}
/* end of contact */


/* Footer */
footer {
  height: 10em;
  background-color: var(--clr-accent);

  display: flex;
  justify-content: center;
  align-items: center;
}

footer a {
  text-transform: uppercase;
  margin: 1em;
  color: black;
}

footer img {
  position: relative;
  top: 3em;
  right: 20em;
}

/* End of Footer */ 


/* --------- END OF MAIN PAGE --------------- */


/* -------ABOUT US HTML ----------- */

.about-faiza {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 85%;
  margin: 10rem auto 0 auto;
}

.about-faiza-text {
  padding: 2em;
}

.about-faiza h3 {
  font-size: 3em;
}

about-faiza p {
  font-size: 1em;
}

.about-faiza img {
  width: 100%;
}


.about-amna {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 85%;
  margin: 10rem auto 0 auto;
}

.about-amna-text {
  padding: 2em;
}

.about-amna img {
  width: 100%;
  padding: 1em;
}

.about-amna h3 {
  font-size: 3em;
}

.about-amna p {
  font-size: 1em;
}

.csp-banner {
  display: flex;
  justify-content: center;
  align-items: center;
}

.csp-banner img {
  width: 15%;
  padding: 4em;
}


/* --------- END OF About us --------------- */


/* -------Services HTML ----------- */
.init-consult {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 85%;
  margin: 10rem auto 0 auto;

  padding-top: 4em;
}

.init-consult img {
  width: 100%;
}

.init-consult-text {
  padding: 2em;
}

.init-consult h3 {
font-size: 3em;
}

.init-consult p {
  font-size: 1em;
}

.second-consult {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 85%;
  margin: 10rem auto 0 auto;
}

.second-consult img {
  width: 100%;
}

.second-consult-text {
  padding: 2em;
}

.second-consult h3 {
  font-size: 3em;
}

.second-consult p {
  font-size: 1em;
}

.second-consult button {
  margin-top: 2em;
  background-color: var(--clr-accent);
  color: black;
  padding: 1.5em;
  border-radius: 0.7em;
  box-shadow: none;
}

.third-consult {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 85%;
  margin: 10rem auto 0 auto;
  
  padding-bottom: 4em;
}

.third-consult img {
  width: 100%;
}

.third-consult-text {
  padding: 2em;
}

.third-consult h3 {
  font-size: 3em;
}

.third-consult p {
  font-size: 1em;
}



/* --------- END OF Services --------------- */


/* -------Portfolio HTML ----------- */
.projects-display {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  padding: 12em 3em 3em 3em;
}

.portfolio-square img{
  width: 100%;
  padding: 1em;
}


/* --------- END OF Portfolio --------------- */


/* -------FAQS HTML ----------- */
.faq-banner-title {
  margin-top: 10em;
  height: 10em;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
}

.faq-banner-title h1 {
  font-size: 3em;
}

.carousel-faq {
  background: white;
  margin-top: 10em;
}

.gallery-square {
  width: 66%;
  height: 25em;
  margin-right: 1em;
  background: #eee;

}

.gallery-square:before {
  display: block;
  line-height: 200px;
  font-size: 80px;
  color: white;
}


.gallery-square-text {
  padding-top: 2em;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  text-align: center;
}


.gallery-square-text p {
  margin-top: 2em;
  width: 45%;
}

.gallery-square-text button {
  color: white;
  margin-top: 1em;
  background-color: black;
  padding: 1.5em;
  border-radius: 0.5em;
  box-shadow: none;
}

.gallery-square-text ol {
  text-align: left;
  margin-top: 1em;
}

.gallery-square-text ol li {
  margin: 0.5em;
}


.footer-faq {
  margin-top: 23em;
}
/* --------- END OF FAQs --------------- */


/* -------Contact us HTML ----------- */
.empty-space-banner {
  padding-top: 10em;
}

.info-left {

}

.info-left img{
  width: 35%;
}

/* -------END OF Contact us HTML ----------- */

